--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --primary-text-color: #000000;
+  --background-color: rgb(255, 240, 240);
+  --text-muted: rgba(0, 0, 0, 0.5);
+}
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  color: var(--primary-text-color);
+  background-color: var(--background-color);
+}
+
+button {
+  background: none;
+  outline: none;
+  border: none;
+}
+
+ul,
+li {
+  text-decoration: none;
+  list-style: none;
+}
