--- a/src/app/public/home/home.component.scss
+++ b/src/app/public/home/home.component.scss
@@ -15,10 +15,10 @@
 }
 
 .year {
-  padding: 2rem;
-  font-size: 3rem;
+  padding: 2rem 0.5rem 0 2rem;
   select {
-    font-size: 3rem;
+    font-size: 1rem;
     border-radius: 7px;
+    margin: 1rem 0;
   }
 }
